--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "robo.fyi",
-  "version": "1.0.1",
+  "description": "Robo.fyi is an attempt to gather and share a variety of information about 3D printers and specifically, the line of printers created by Robo 3D.",
+  "version": "1.0.2",
   "private": false,
+  "author": "OutsourcedGuru",
+  "email": "info@robo.fyi",
+  "url": "http://robo.fyi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OutsourcedGuru/robo.fyi.git"
+  },
+  "license" : "GPL-3.0",
   "scripts": {
     "start": "node app.js"
   },
